# fountainrank

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .trivyignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run.ps1  turbo.json
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: account_deletion_cleanup.py  auth.py  badges.py  conditions.py  config.py  consensus.py  contributions.py  db.py  display.py  export_openapi.py  filters.py  geo.py  geocoding.py  geohash.py  images.py  locks.py  logging_config.py  logto_auth.py  logto_management.py  main.py  membership.py  middleware.py  models.py  multipart_read.py  ranking.py  rate_limit.py  reports.py  schemas.py  seo_coverage.py  storage.py  userinfo.py  write_attempt_cleanup.py
backend/app/email/: sender.py  templates.py
backend/app/imports/: boundaries.py  boundaries_registry.py  boundary_cli.py  boundary_load.py  cli.py  loader_job_render.py  loader_session.py  loader_teardown.py  membership_cli.py  merge.py  osm.py  osmium_geojson.py  overpass.py  poly_to_wkt.py  regions.py  seo_coverage_cli.py  session_reaper.py
backend/app/routers/: admin.py  attribute_types.py  email_webhook.py  fountains.py  geocode.py  health.py  leaderboard.py  photos.py  places.py  rating_types.py  stats.py  users.py
backend/migrations/: env.py
backend/migrations/sql/: 0025_backfill.sql
backend/migrations/versions/: 0001_enable_postgis.py  0002_phase1_core_schema.py  0003_seed_rating_types.py  0004_osm_ingestion.py  0005_contribution_data.py  0006_seed_attribute_types.py  0007_condition_reports.py  0008_fountain_notes.py  0009_access_context.py  0010_contrib_location_gist.py  0011_fountains_geometry_gist.py  0012_users_nickname.py  0013_scope_bounds_multipolygon.py  0014_place_boundaries.py  0015_fountain_membership.py  0016_place_boundary_cells.py  0017_fountain_photos.py  0017_place_scope_config_ready.py  0018_fountain_photos.py  0018_photo_reports.py  0019_photo_reports.py  0020_condition_award_window.py  0021_content_reports.py  0022_account_deletion.py  0023_ratings_is_proximate.py  0024_write_attempts.py  0025_place_hierarchy.py  0026_index_all_countries.py  0027_boundary_country_kind_idx.py  0028_boundary_area.py  0029_moderation_actions.py  0030_account_sanctions.py
backend/tests/: conftest.py  osmium_real_check.py  test_access_context.py  test_account_deletion_cleanup.py  test_account_sanctions.py  test_account_sanctions_migration.py  test_action_shell_boundary.py  test_add_fountain_conflict.py  test_add_lock_timeout_routes.py  test_admin_authority.py  test_admin_contributor_history.py  test_admin_moderation.py  test_admin_photos.py  test_admin_reports_queue.py  test_attribute_pages_api.py  test_attribute_types_seed.py  test_attributes_api.py  test_auth_seam.py  test_badges.py  test_boundaries_parse.py  test_boundaries_registry.py  test_boundary_cli.py  test_boundary_load.py  test_city_photos.py  test_condition_award_window_index_migration.py  test_condition_reports_migration.py  test_conditions.py  test_conditions_api.py  test_config.py  test_config_spaces.py  test_consensus.py  test_content_reports.py  test_content_reports_migration.py  test_contribution_data_migration.py  test_contribution_emission.py  test_contribution_write_rate_routes.py  test_contributions.py  test_contributions_photo.py  test_db_ssl.py  test_display.py  (+69 more)
backend/tests/fixtures/: california_sample.poly  osm_basic.geojson  (+4 more)
(+698 files in other folders)
